resolved alignment issue

--- a/src/blocks/team/style.scss
+++ b/src/blocks/team/style.scss
@@ -113,7 +113,6 @@
 		ul.uagb-team__social-list {
 			display: flex;
 			list-style: none;
-			justify-content: center;
 		}
 
 		.uagb-team__social-icon-wrap { // For Backword.
